[package]
name = "secretswap-pair"
version = "0.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Terraswap pair contract"
license = "MIT"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
integer-sqrt = "0.1.5"
secretswap = { path = "../../packages/secretswap", default-features = false, version = "0.1.0" }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", branch = "debug-print" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", branch = "debug-print" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
base64 = "0.13.0"
#[dev-dependencies]
#cosmwasm-vm = { version = "0.10.1", default-features = false }
#cosmwasm-schema = "0.10.1"
## terra-cosmwasm = { version = "1.2.2" }
